--- a/practice3.html
+++ b/practice3.html
@@ -1,1 +1,32 @@
-
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Practice 3</title>
+        <script src="practice3.js" defer></script>
+    </head>
+    <body>
+        <header>
+            <h1>
+                Practice 3
+            </h1>
+        </header>
+        <form id="password_form">
+            <div>
+                <label for="first_password" name="first_password">
+                    First password:
+                </label>
+                <input type="text" id="first_password" name="first_password" />
+            </div>
+            <div>
+                <label for="second_password">
+                    Second password:
+                </label>
+                <input type="text" id="second_password" name="second_password" />
+            </div>
+            <button type="submit">
+                Validate your passwords
+            </button>
+        </form>
+    </body>
+</html>
