--- a/practice2/index.html
+++ b/practice2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice 2</title>
-    <script src="practice2.js" defer></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div id="box">Lorem ipsum</div>
