--- a/practice3/index.html
+++ b/practice3/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Practice 3</title>
-        <script src="practice3.js" defer></script>
+        <script src="index.js" defer></script>
     </head>
     <body>
         <header>
@@ -16,13 +16,13 @@
                 <label for="first_password" name="first_password">
                     First password:
                 </label>
-                <input type="text" id="first_password" name="first_password" />
+                <input type="text" id="first_password" name="first_password" required />
             </div>
             <div>
                 <label for="second_password">
                     Second password:
                 </label>
-                <input type="text" id="second_password" name="second_password" />
+                <input type="text" id="second_password" name="second_password" required />
             </div>
             <button type="submit">
                 Validate your passwords
